# axonai_vps

./: .dockerignore  .gitignore  .gitignore copy  Dockerfile  Dockerfile copy  README.md  api.py  convert_to_onnx.py  environment.docker.yml  environment.yml  gait_results.py  generate_report.py  main.py  main_calcIntrinsics.py  opencap-main.py  pyproject.toml  requirements.txt  utils.py  utilsChecker.py  utilsDetector.py  utilsSync.py
API_wrappers/: get_neutralTRC_api.py  intrinsics_api.py
MarkerAugmenter/LSTM/v0.0/: model.onnx
MarkerAugmenter/LSTM/v0.1_lower/: model.onnx
MarkerAugmenter/LSTM/v0.1_upper/: model.onnx
MarkerAugmenter/LSTM/v0.2_lower/: model.onnx
MarkerAugmenter/LSTM/v0.2_upper/: model.onnx
MarkerAugmenter/LSTM/v0.3_lower/: model.onnx
MarkerAugmenter/LSTM/v0.3_upper/: model.onnx
OpenCapData_experiment/Videos/: mappingCamDevice.pickle
OpenCapData_experiment/Videos/Cam0/: cameraIntrinsicsExtrinsics.pickle
OpenCapData_experiment/Videos/Cam0/InputMedia/neutral/: neutral.mov  neutral_rotated.avi
OpenCapData_experiment/Videos/Cam0/OutputPkl_default/33/: 33_rotated_pp.pkl
OpenCapData_experiment/Videos/Cam0/OutputPkl_default/neutral/: neutral_rotated_pp.pkl
OpenCapData_experiment/Videos/Cam1/: cameraIntrinsicsExtrinsics.pickle
OpenCapData_experiment/Videos/Cam1/InputMedia/neutral/: neutral.mov  neutral_rotated.avi
OpenCapData_experiment/Videos/Cam1/OutputPkl_default/33/: 33_rotated_pp.pkl
OpenCapData_experiment/Videos/Cam1/OutputPkl_default/neutral/: neutral_rotated_pp.pkl
OpenCapData_experiment_modified/: sessionMetadata.yaml
OpenCapData_experiment_modified/MarkerData/: neutral.trc
OpenCapData_experiment_modified/OpenSimData/Model/: LaiUhlrich2022_scaled.osim
OpenCapData_experiment_modified/Videos/Cam0/OutputPkl/: neutral_keypoints.pkl
OpenCapData_experiment_modified/Videos/Cam1/OutputPkl/: neutral_keypoints.pkl
app/: main.py
apps/streamlit_app/: reflex_app.py  streamlit_app.py
axonai_website/: requirements.txt  rxconfig.py
axonai_website/axonai_vps/: axonai_vps.py
tests/opencap-test-data/Data/sync_2-cameras/: sessionMetadata.yaml
utilities/: gait_analysis.py  utils.py  utilsAugmenter.py  utilsChecker.py  utilsGaitAnalysis.py  utilsKinematics.py  utilsOpenSim.py  utilsOpensim_old.py  utilsProcessing.py  utilsSync.py  utilsTRC.py  utils_getneutralTRC.py  utils_opensimscaling.py
(+21 files in other folders)
