[project]
name = "axon-ai"
version = "0.1.0"
description = "Comprehensive gait metrics tools"
authors = [
    { name = "Jinyan Wang", email = "jinyan@axon-ai.co.uk" },
    { name = "Fatimah Al-ani", email = "fatima@axon-ai.co.uk" },
]
readme = "README.md"
urls = { Homepage = "https://github.com/fmaa23/axon-ai" }
requires-python = ">=3.9,<3.13"
dependencies = [
    "scipy",
    "numpy>=1.20.0,<2.0.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "tensorflow>=2.13.0",
    "typing_extensions>=4.9.0",
    "plotly", 
    "opencap",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27"
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.8",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.5",
    "ty>=0.0.8",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=60.0.0", "wheel"]

[tool.uv.sources]
opencap = { git = "ssh://git@github.com/fmaa23/opencap-core-private.git"}